// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3-style.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

=====================================output=====================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

? [
      aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  ]
: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

================================================================================
`;

exports[`3-style.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

=====================================output=====================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

? [
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  ]
: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

================================================================================
`;

exports[`anchor.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key1: &default

  subkey1: value1

key2:
  <<: *default

=====================================output=====================================
key1: &default
    subkey1: value1

key2:
    <<: *default

================================================================================
`;

exports[`anchor.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key1: &default

  subkey1: value1

key2:
  <<: *default

=====================================output=====================================
key1: &default
  subkey1: value1

key2:
  <<: *default

================================================================================
`;

exports[`anchor2.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key1: &default

  # This key ...
  subkey1: value1

key2:
  <<: *default

=====================================output=====================================
key1: &default # This key ...
    subkey1: value1

key2:
    <<: *default

================================================================================
`;

exports[`anchor2.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key1: &default

  # This key ...
  subkey1: value1

key2:
  <<: *default

=====================================output=====================================
key1: &default # This key ...
  subkey1: value1

key2:
  <<: *default

================================================================================
`;

exports[`anchor3.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key1: &default
# This key
  subkey1: value1

key2:
  <<: *default

=====================================output=====================================
key1: &default # This key
    subkey1: value1

key2:
    <<: *default

================================================================================
`;

exports[`anchor3.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key1: &default
# This key
  subkey1: value1

key2:
  <<: *default

=====================================output=====================================
key1: &default # This key
  subkey1: value1

key2:
  <<: *default

================================================================================
`;

exports[`array-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[1, 2, 3]: 123

=====================================output=====================================
[1, 2, 3]: 123

================================================================================
`;

exports[`array-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1, 2, 3]: 123

=====================================output=====================================
[1, 2, 3]: 123

================================================================================
`;

exports[`array-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
123: [1, 2, 3]

=====================================output=====================================
123: [1, 2, 3]

================================================================================
`;

exports[`array-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123: [1, 2, 3]

=====================================output=====================================
123: [1, 2, 3]

================================================================================
`;

exports[`comment.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`comment-value.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
123: # hello

=====================================output=====================================
123: # hello

================================================================================
`;

exports[`comment-value.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123: # hello

=====================================output=====================================
123: # hello

================================================================================
`;

exports[`common.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`common.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`explicit-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? key1
: value
? key2
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value
? solongitshouldbreakbutitcannot_longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: # Comment
  foo: bar
? multiline
  scalar
  key
: value

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: value
solongitshouldbreakbutitcannot_longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong:
    # Comment
    foo: bar
? multiline
  scalar
  key
: value

================================================================================
`;

exports[`explicit-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? key1
: value
? key2
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value
? solongitshouldbreakbutitcannot_longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: # Comment
  foo: bar
? multiline
  scalar
  key
: value

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: value
solongitshouldbreakbutitcannot_longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong:
  # Comment
  foo: bar
? multiline
  scalar
  key
: value

================================================================================
`;

exports[`in-sequence.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- a: b
  c: d

=====================================output=====================================
- a: b
  c: d

================================================================================
`;

exports[`in-sequence.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- a: b
  c: d

=====================================output=====================================
- a: b
  c: d

================================================================================
`;

exports[`key-with-leading-comment.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? # comment
  key
: value

=====================================output=====================================
? # comment
  key
: value

================================================================================
`;

exports[`key-with-leading-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? # comment
  key
: value

=====================================output=====================================
? # comment
  key
: value

================================================================================
`;

exports[`mapping.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key:
  key: value

=====================================output=====================================
key:
    key: value

================================================================================
`;

exports[`mapping.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key:
  key: value

=====================================output=====================================
key:
  key: value

================================================================================
`;

exports[`merge-twice.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
.anchors:
  - &anchor1
    key: value
  - &anchor2
    another: prop

foo:
  bar: baz
  <<: *anchor1
  <<: *anchor2

=====================================output=====================================
.anchors:
    - &anchor1
      key: value
    - &anchor2
      another: prop

foo:
    bar: baz
    <<: *anchor1
    <<: *anchor2

================================================================================
`;

exports[`merge-twice.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.anchors:
  - &anchor1
    key: value
  - &anchor2
    another: prop

foo:
  bar: baz
  <<: *anchor1
  <<: *anchor2

=====================================output=====================================
.anchors:
  - &anchor1
    key: value
  - &anchor2
    another: prop

foo:
  bar: baz
  <<: *anchor1
  <<: *anchor2

================================================================================
`;

exports[`middle-comment.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map # comment
a: 123

=====================================output=====================================
!!map # comment
a: 123

================================================================================
`;

exports[`middle-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map # comment
a: 123

=====================================output=====================================
!!map # comment
a: 123

================================================================================
`;

exports[`middle-comments.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
a: 123

=====================================output=====================================
!!map
# comment 1
# comment 2
a: 123

================================================================================
`;

exports[`middle-comments.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
a: 123

=====================================output=====================================
!!map
# comment 1
# comment 2
a: 123

================================================================================
`;

exports[`props.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
--- !!map &anchor
a: 123

=====================================output=====================================
---
!!map &anchor
a: 123

================================================================================
`;

exports[`props.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
--- !!map &anchor
a: 123

=====================================output=====================================
---
!!map &anchor
a: 123

================================================================================
`;

exports[`props-in-map.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor
  a: 123

=====================================output=====================================
a: !!map &anchor
    a: 123

================================================================================
`;

exports[`props-in-map.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor
  a: 123

=====================================output=====================================
a: !!map &anchor
  a: 123

================================================================================
`;

exports[`quote-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
"a": 123
'b': 123

=====================================output=====================================
"a": 123
"b": 123

================================================================================
`;

exports[`quote-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
"a": 123
'b': 123

=====================================output=====================================
"a": 123
"b": 123

================================================================================
`;

exports[`sequence.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key:
- value

=====================================output=====================================
key:
    - value

================================================================================
`;

exports[`sequence.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key:
- value

=====================================output=====================================
key:
  - value

================================================================================
`;

exports[`tag-key.yml - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? !!tag key
: value

=====================================output=====================================
!!tag key: value

================================================================================
`;

exports[`tag-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? !!tag key
: value

=====================================output=====================================
!!tag key: value

================================================================================
`;
